--- a/index.html
+++ b/index.html
@@ -18,27 +18,10 @@
 	</head>
 	<body>
 		<header>
-			<nav id="navbar">
-				<section id="symbols">
-					<span class="material-symbols-outlined" id="menu"> menu </span>
-					<span id="yt_png">
-						<img
-							src="https://cdn-icons-png.flaticon.com/128/1384/1384060.png"
-							alt="Logo"
-						/>
-						<h1>YOUTUBE</h1>
-					</span>
-				</section>
-				<section id="search_bar">
-					<input type="text" id="search" placeholder="Search here" />
-					<button onclick="searchTerm()">Search</button>
-				</section>
-			</nav>
+			<nav id="navbar"></nav>
 		</header>
-
 		<main id="container"></main>
-
 		<footer></footer>
-		<script src="index.js"></script>
+		<script src="index.js" type="module"></script>
 	</body>
 </html>
